# cryptoVote

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: ring_benches.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_keys.rs  parse_signature.rs  roundtrip.rs  verify_vote.rs
src/: blsag.rs  encoding.rs  error.rs  extism.rs  identity.rs  lib.rs  main.rs  ownership.rs  signing.rs  types.rs  verifying.rs  wasm.rs
tests/: integration.rs  upgrade_vectors.rs
