[package]
name = "crypto_vote"
version = "0.1.0"
# Edition 2024 implies a floor of Rust 1.85; we do not pin `rust-version`
# explicitly because CI only tests against `stable`, so a stricter MSRV
# would be an unverified promise.
edition = "2024"
description = "An agnostic cryptographic oracle for verifiable voting using linkable ring signatures (BLSAG) over Ristretto255, with Blake2b-512 as the hash function."
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["voting", "cryptography", "ring-signature", "blsag", "blake2"]
categories = ["cryptography", "wasm"]

# A `cdylib` target lets `wasm-pack` produce a browser-ready WebAssembly
# module, while `rlib` keeps the crate usable as a regular Rust dependency
# (and as the base for the CLI binary).
[lib]
name = "crypto_vote"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cryptovote"
path = "src/main.rs"
# Skip the binary when the `cli` feature is off, so `cargo build
# --no-default-features --features wasm` does not try to pull in clap
# and write a `main` function into a WebAssembly module.
required-features = ["cli"]

[features]
# `default` is what you get with `cargo build`. We keep WASM bindings off
# by default so a plain native build does not pull in `wasm-bindgen`.
default = ["cli"]
# Build the command-line interface. Disable when targeting WebAssembly.
cli = ["dep:clap"]
# Expose the public API to JavaScript via `wasm-bindgen`. Enable when
# building the browser module with `wasm-pack`.
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:getrandom", "getrandom/wasm_js"]
# Expose the public API as an Extism plugin. The same `.wasm` artefact
# is then loadable by every Extism host SDK (browser, Node, Python,
# Go, Rust, …). We target `wasm32-wasip1` for this flavour so `SysRng`
# reads from WASI's `random_get` and no extra getrandom backend is
# needed.
extism = ["dep:extism-pdk", "dep:serde"]

[dependencies]
# Ristretto255 group operations and scalar arithmetic. The local BLSAG
# implementation needs `digest` for `RistrettoPoint::from_hash`,
# `rand_core` for scalar / point sampling in signing and tests, and
# `zeroize` so `SecretKey` can wipe its scalar on drop.
curve25519-dalek = { version = "5.0.0-pre.6", features = ["digest", "rand_core", "zeroize"] }

# Wipe secret scalars when their wrapper leaves scope.
zeroize = "1"

# Hash function (cryptographic core of every challenge in the protocol).
# Blake2b-512 produces a 64-byte digest natively, which is exactly what
# curve25519-dalek's `Scalar::from_hash` and `RistrettoPoint::from_hash`
# consume. The 0.11 release candidate matches curve25519-dalek 5's digest API.
blake2 = { version = "0.11.0-rc.6", default-features = false }

# `SysRng` is what feeds BLSAG signing; on WebAssembly it delegates to
# `getrandom` (which itself uses `Crypto.getRandomValues` when the
# `wasm` feature enables `getrandom/wasm_js`). We only need the
# `std` and `sys_rng` features — `std_rng` and `thread_rng` would pull
# extra generators we do not use.
rand = { version = "0.10", default-features = false, features = ["std", "sys_rng"] }

# `SysRng` is fallible in rand 0.10; `UnwrapErr` adapts it to the infallible
# `CryptoRng` interface expected by curve25519-dalek's random constructors.
rand_core = "0.10"

# Hex encoding for serialising keys / signatures across the CLI and
# WASM boundaries. Deliberately the only encoding the public API knows
# about, so we never have to decide between base64/base58/etc.
hex = "0.4"

# Unicode NFC normalisation applied to every `election_id` before it is
# hashed. This neutralises a footgun where the host and the voter spell
# the same identifier with different Unicode forms (NFC on the server,
# NFD pasted from an editor, etc.): without normalisation the two
# byte-strings hash differently and every signature for the election
# silently fails to verify. We commit to NFC explicitly on both sides so
# the question never reaches the caller.
unicode-normalization = "0.1"

# CLI dependency, only pulled in when the `cli` feature is on.
clap = { version = "4", features = ["derive"], optional = true }

# WebAssembly bindings, only pulled in when the `wasm` feature is on.
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# `getrandom` is what `rand`'s `SysRng` calls into. On wasm32-unknown-unknown we
# enable its `wasm_js` feature so randomness comes from Web Crypto. This is an
# optional direct dependency only so the `wasm` feature can enable that backend
# on the same `getrandom` version used by `rand`.
getrandom = { version = "0.4", optional = true }

# Extism Plugin Development Kit. Provides the `#[plugin_fn]` macro and
# host/guest ABI that lets a single `.wasm` artefact run inside every
# Extism host SDK (browser, Node, Python, Go, Rust, …).
extism-pdk = { version = "1", optional = true }

# Needed for `#[derive(Serialize, Deserialize)]` on the Extism I/O
# structs. Pulled in only when the `extism` feature is on.
serde = { version = "1", features = ["derive"], optional = true }

# Release profile tuned for small, fast WebAssembly artefacts. `opt-level
# = "z"` favours code size over speed, which is normally what you want
# inside a browser bundle. The CLI build picks the same profile, but its
# binary is small enough that the difference is negligible.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# `wasm-pack` runs `wasm-opt` after rustc to shrink the bundle. The
# bundled `wasm-opt` validator runs in MVP-only mode by default and
# rejects post-MVP instructions that modern rustc emits unconditionally
# (notably `memory.fill` from the bulk-memory proposal, used heavily
# by `zeroize` and Rust's own memset lowering). We have to opt back
# into the feature set rustc actually targets, otherwise the wasm-pack
# step fails with `[wasm-validator error] ... Bulk memory operations
# require bulk memory [--enable-bulk-memory]`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-reference-types",
]

# Treat the `fuzz/` directory as a separate package: cargo-fuzz needs
# nightly + `libfuzzer-sys`, neither of which should leak into the
# default `cargo build` graph. The fuzz package has its own
# `Cargo.toml`; we just declare an empty workspace here to anchor it
# and tell cargo not to pull `fuzz/` in.
[workspace]
members = []
exclude = ["fuzz"]
